fixed profile styling to align bike cards better

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,3 +30,8 @@ body {
   align-items: center;
   width: 200vw;
 }
+
+.profile-card {
+  width:auto;
+  
+}
